; ModuleID = '/home/carl/AnghaBench/freebsd/sys/net/extr_mppcd.c_MPPC_InitDecompressionHistory.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/net/extr_mppcd.c_MPPC_InitDecompressionHistory.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.MPPC_decomp_state = type { i32 }

@MPPE_HIST_LEN = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @MPPC_InitDecompressionHistory(i8* %0) #0 {
  %2 = alloca i8*, align 8
  %3 = alloca %struct.MPPC_decomp_state*, align 8
  store i8* %0, i8** %2, align 8
  %4 = load i8*, i8** %2, align 8
  %5 = bitcast i8* %4 to %struct.MPPC_decomp_state*
  store %struct.MPPC_decomp_state* %5, %struct.MPPC_decomp_state** %3, align 8
  %6 = load i8*, i8** %2, align 8
  %7 = call i32 @bzero(i8* %6, i32 4)
  %8 = load i32, i32* @MPPE_HIST_LEN, align 4
  %9 = load %struct.MPPC_decomp_state*, %struct.MPPC_decomp_state** %3, align 8
  %10 = getelementptr inbounds %struct.MPPC_decomp_state, %struct.MPPC_decomp_state* %9, i32 0, i32 0
  store i32 %8, i32* %10, align 4
  ret void
}

declare dso_local i32 @bzero(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
